--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.08MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-307.2KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
-  - {name: 乌克兰-2.29MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇺🇸 美国-4.32MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: gnailiad.gq, port: 11823, type: trojan, password: eVH5bAf8mx, sni: gnailiad.gq, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.55MB/s(Youtube:不良林), server: tj-hk02.yiyodns.xyz, port: 443, type: trojan, password: 7dafe71e-2be6-302f-bdfc-e6319a3299bc, sni: tj-hk02.yiyodns.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-323.9KB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: gnailiad.gq, port: 59484, type: vmess, uuid: f377c443-b6a5-40ef-c52c-a0ba721805ff, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-193.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇷🇺 俄罗斯联邦-186.7KB/s(Youtube:不良林), server: 213.183.53.208, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-199.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇳 (已存活1天)中国-5.92MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 乌克兰-494.0KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: ga.gnailiad.ga, port: 2443, type: vmess, uuid: 5b6fd9e2-0bf7-4eee-92d6-21b7bdae7062, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-178.7KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇸🇬 新加坡-522.6KB/s(Youtube:不良林), server: 81.90.189.33, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.2KB/s(Youtube:不良林)
-      - 乌克兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-323.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-193.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-199.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.92MB/s(Youtube:不良林)
+      - 乌克兰-494.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-178.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-522.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.2KB/s(Youtube:不良林)
-      - 乌克兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-323.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-193.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-199.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.92MB/s(Youtube:不良林)
+      - 乌克兰-494.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-178.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-522.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.2KB/s(Youtube:不良林)
-      - 乌克兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-323.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-193.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-199.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.92MB/s(Youtube:不良林)
+      - 乌克兰-494.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-178.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-522.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-178.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.2KB/s(Youtube:不良林)
-      - 乌克兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-323.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-193.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-199.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.92MB/s(Youtube:不良林)
+      - 乌克兰-494.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-178.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-522.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.2KB/s(Youtube:不良林)
-      - 乌克兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-323.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-193.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-199.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.92MB/s(Youtube:不良林)
+      - 乌克兰-494.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-178.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-522.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.2KB/s(Youtube:不良林)
-      - 乌克兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-323.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-193.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-199.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.92MB/s(Youtube:不良林)
+      - 乌克兰-494.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-178.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-522.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.2KB/s(Youtube:不良林)
-      - 乌克兰-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-323.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-193.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-199.2KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.92MB/s(Youtube:不良林)
+      - 乌克兰-494.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-178.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-522.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
