--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-8.14MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 乌克兰-1.16MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇸🇬 新加坡-487.7KB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-762.4KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.90MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-331.4KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: gnailiad.gq, port: 59484, type: vmess, uuid: f377c443-b6a5-40ef-c52c-a0ba721805ff, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-850.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-2.29MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11136, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-343.6KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.05MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.14MB/s(Youtube:不良林)
-      - 乌克兰-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-487.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-331.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-850.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-8.14MB/s(Youtube:不良林)
-      - 乌克兰-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-487.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-331.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-850.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.14MB/s(Youtube:不良林)
-      - 乌克兰-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-487.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-331.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-850.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.14MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-8.14MB/s(Youtube:不良林)
-      - 乌克兰-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-487.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-331.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-850.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.14MB/s(Youtube:不良林)
-      - 乌克兰-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-487.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-331.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-850.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-8.14MB/s(Youtube:不良林)
-      - 乌克兰-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-487.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-331.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-850.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-8.14MB/s(Youtube:不良林)
-      - 乌克兰-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-487.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-331.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-850.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
