--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-2.29MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11136, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-343.6KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 台湾-5.61MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.29MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-11.12MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.05MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-259.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇰🇷 韩国-483.6KB/s(Youtube:不良林), server: ga.gnailiad.tk, port: 1443, type: vmess, uuid: deaf378f-515f-4832-bfc1-ed937edc78c3, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-473.9KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-549.4KB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.59MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-378.6KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-5.61MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.61MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-473.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
